@@ -1,3 +1,10 @@
+2008-11-27  Timo Teras  <timo.teras@iki.fi>
+	From Matthew Krenzer <krenzer@wayport.net>:
+	* libipsec/{libpfkey.h|pfkey.c}, racoon/{cfparse.y,cftoken.l,
+	  localconf.c,localconf.h,pfkey.c,racoon.conf.5}: ability to set
+	  pfkey buffer size via a configuration directive (indentation and
+	  other minor fixes by Timo)
+
 2008-11-25  Christoph Badura  <bad@netbsd.org>
 	* src/racoon/isakmp.c:
 	  Keep myaddr.sock at -1 when no socket is opened.
